--- a/Core/Quiz.Application/Quiz.Application.csproj
+++ b/Core/Quiz.Application/Quiz.Application.csproj
@@ -7,12 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="CQRS\Queries\Questions\" />
+      <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="MediatR" Version="13.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="15.0.1" />
-      <PackageReference Include="MediatR" Version="13.0.0" />
+      <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
     </ItemGroup>
 
 </Project>
