Role işlemleri gerçekleştirildi, jwt entegre edildi

--- a/Presentation/Quiz.API/appsettings.json
+++ b/Presentation/Quiz.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Audience":"https://localhost:7163",
+    "Issuer" :"https://localhost:7163",
+    "Key":"Buranın minimum 256 bit olması için bişeyler yazmam gerek bende o yüzden bu metni yazıyorum. Hala da olmamış yazmaya devam ediyoru yethooo"
+  },
   "AllowedHosts": "*"
 }
