--- a/Core/Quiz.Application/Quiz.Application.csproj
+++ b/Core/Quiz.Application/Quiz.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="15.0.1" />
       <PackageReference Include="MediatR" Version="13.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.13.0" />
     </ItemGroup>
 
     <ItemGroup>
