--- a/Presentation/Quiz.API/appsettings.json
+++ b/Presentation/Quiz.API/appsettings.json
@@ -10,5 +10,8 @@
     "Issuer" :"https://localhost:7163",
     "Key":"Buranın minimum 256 bit olması için bişeyler yazmam gerek bende o yüzden bu metni yazıyorum. Hala da olmamış yazmaya devam ediyoru yethooo"
   },
+  "ConnectionStrings":{
+    "DefaultConnection": "Server=localhost;Database=LogDB;User Id=postgres;password=Umut135.;port=5432"
+  },
   "AllowedHosts": "*"
 }
