Client ıd bilgisi appsettings.json'a eklendi

--- a/Presentation/Quiz.API/appsettings.json
+++ b/Presentation/Quiz.API/appsettings.json
@@ -13,5 +13,8 @@
   "ConnectionStrings":{
     "DefaultConnection": "Server=localhost;Database=LogDB;User Id=postgres;password=Umut135.;port=5432"
   },
+  "GoogleAuth" : {
+    "ClientId": "487840124789-u67bq4e0ko94s23bgjen8k0o6hgl1vlk.apps.googleusercontent.com"
+  },
   "AllowedHosts": "*"
 }
